--- a/samples/ServerSide/ChartJs.Blazor.Sample.Serverside/Components/Pages/ScatterChart.cshtml
+++ b/samples/ServerSide/ChartJs.Blazor.Sample.Serverside/Components/Pages/ScatterChart.cshtml
@@ -1,117 +1,3 @@
 ﻿@page "/ScatterChart"
 
-@using ChartJs.Blazor.ChartJS.ScatterChart
-@using ChartJs.Blazor.ChartJS.Common.Utils
-@using Newtonsoft.Json
-
-<h2>Scatter Chart</h2>
-<div class="row">
-    <button class="btn btn-primary" onclick="@UpdateChart">Update Chart </button>
-</div>
-
-<ChartJsScatterChart ref="scatterChartJs" Config="@scatterChartConfig" Width="600" Height="300" />
-
-<DataDisplay OnUpdatedDataStr="@OnDataStrChange" bind-DataStr="@DataStr" Width="600" Height="300" />
-
-@functions{
-
-
-    ScatterChartConfig scatterChartConfig { get; set; }
-    ChartJsScatterChart scatterChartJs;
-
-    string DataStr
-    {
-        get => JsonConvert.SerializeObject(scatterChartConfig.Data, Formatting.Indented);
-        set
-        {
-            scatterChartConfig.Data = JsonConvert.DeserializeObject<ScatterConfigData>(value);
-            Console.WriteLine(JsonConvert.SerializeObject(scatterChartConfig.Data));
-        }
-    }
-
-    void OnDataStrChange(string dataStr)
-    {
-        scatterChartConfig.Data = JsonConvert.DeserializeObject<ScatterConfigData>(dataStr);
-        scatterChartJs.Update();
-    }
-
-    protected override void OnInit()
-    {
-        var points = new List<Point>();
-        points.Add(PointUtil.NewRandPoint(-10, 10, -10, 10));
-        points.Add(PointUtil.NewRandPoint(-10, 10, -10, 10));
-        points.Add(PointUtil.NewRandPoint(-10, 10, -10, 10));
-        points.Add(PointUtil.NewRandPoint(-10, 10, -10, 10));
-
-        scatterChartConfig = scatterChartConfig ?? new ScatterChartConfig
-        {
-            CanvasId = "myFirstScatterChart",
-            Options = new ScatterConfigOptions
-            {
-                Title = new OptionsTitle { Display = true, Text = "Scatter Chart" },
-                Responsive = true
-            },
-            Data = new ScatterConfigData
-            {
-                Datasets = new List<ScatterConfigDataset>
-            {
-                    new ScatterConfigDataset
-                    {
-                        Label = "First dataset",
-                        BorderColor = "rgba(80,80,235,0.6)",
-                        BackgroundColor = "rgba(80,80,235,0.6)",
-                        BorderWidth = 3,
-                        PointRadius = 5,
-                        PointHitRadius = 5,
-                        Data = points,
-                        ShowLine = false
-                    },
-                    new ScatterConfigDataset
-                    {
-                        Label = "Second dataset",
-                        BorderColor = "rgba(80,234,80,0.6)",
-                        BackgroundColor = "rgba(80,234,80,0.6)",
-                        BorderWidth = 3,
-                        PointRadius = 5,
-                        PointHitRadius = 5,
-                        ShowLine = true,
-                        Data = new List<Point>
-                    {
-                            PointUtil.NewRandPoint(-10, 10, -10, 10),
-                            PointUtil.NewRandPoint(-10, 10, -10, 10),
-                            PointUtil.NewRandPoint(-10, 10, -10, 10),
-                            PointUtil.NewRandPoint(-10, 10, -10, 10)
-                        }
-                    },
-                    new ScatterConfigDataset
-                    {
-                        Label = "Third dataset",
-                        BorderColor = "rgba(234,80,80,0.6)",
-                        BackgroundColor = "rgba(234,80,80,0.6)",
-                        BorderWidth = 3,
-                        PointRadius = 5,
-                        PointHitRadius = 5,
-                        ShowLine = false,
-                        Data = new List<Point>
-                    {
-                            PointUtil.NewRandPoint(-10, 10, -10, 10),
-                            PointUtil.NewRandPoint(-10, 10, -10, 10),
-                            PointUtil.NewRandPoint(-10, 10, -10, 10),
-                            PointUtil.NewRandPoint(-10, 10, -10, 10)
-                        }
-                    }
-                }
-            }
-        };
-    }
-
-    public void UpdateChart()
-    {
-        //Update existing dataset
-
-        scatterChartConfig.Data.Datasets.ForEach(dataset => { dataset.Data.Add(PointUtil.NewRandPoint(-10, 10, -10, 10)); });
-
-        scatterChartJs.Update();
-    }
-
-}
+<ScatterChartComponent />
