--- a/samples/ServerSide/ChartJs.Blazor.Sample.Serverside/Components/Pages/Legend/DotNet-Instance-Handlers.cshtml
+++ b/samples/ServerSide/ChartJs.Blazor.Sample.Serverside/Components/Pages/Legend/DotNet-Instance-Handlers.cshtml
@@ -1,146 +1,3 @@
 ﻿@page "/Legend/DotNetInstanceHandlers"
-@using ChartJs.Blazor.ChartJS.BarChart
-@using ChartJs.Blazor.ChartJS.BarChart.Dataset
-@using ChartJs.Blazor.ChartJS.Common.Legends
-@using ChartJs.Blazor.ChartJS.Common.Legends.OnClickHandler
-@using ChartJs.Blazor.ChartJS.Common.Legends.OnHover
-@using Microsoft.JSInterop
-@using Newtonsoft.Json
-@using Newtonsoft.Json.Linq
 
-<h2>Legend Item - .Net instance click/hover handler</h2>
-<div class="row">
-    <button class="btn btn-primary" onclick="@UpdateChart">Update Chart </button>
-</div>
-<ChartJsBarChart ref="barChart"
-                 Config="@barChartConfig"
-                 Width="600"
-                 Height="300" />
-
-<DataDisplay OnUpdatedDataStr="@OnDataStrChange" bind-DataStr="@DataStr" Width="600" Height="300" />
-
-@functions {
-
-    [Inject]
-    protected Sotsera.Blazor.Toaster.IToaster Toaster { get; set; }
-
-    private BarChartConfig barChartConfig { get; set; }
-    private ChartJsBarChart barChart { get; set; }
-
-    string DataStr
-    {
-        get => JsonConvert.SerializeObject(barChartConfig.Data, Formatting.Indented);
-        set
-        {
-            barChartConfig.Data = JsonConvert.DeserializeObject<BarChartData>(value);
-            Console.WriteLine(JsonConvert.SerializeObject(barChartConfig.Data));
-        }
-    }
-
-    void OnDataStrChange(string dataStr)
-    {
-        barChartConfig.Data = JsonConvert.DeserializeObject<BarChartData>(dataStr);
-        barChart.Update();
-    }
-
-    protected override void OnInit()
-    {
-        var rand = new Random();
-        barChartConfig = barChartConfig ?? new BarChartConfig
-        {
-            CanvasId = "myBarChartCanvas",
-            Options = new BarChartOptions
-            {
-                Text = "Sample chart from Blazor",
-                Display = true,
-                Responsive = true,
-                Legend = new Legend
-                {
-                    OnClick = new DotNetInstanceClickHandler(InstanceClickHandler),
-                    OnHover = new DotNetInstanceHoverHandler(LegendItemInstanceOnHoverHandler)
-                }
-            },
-            Data = new BarChartData
-            {
-                Labels = new List<string> { "Red", "Blue", "Yellow", "Green", "Purple", "Orange" },
-                Datasets = new List<BaseBarChartDataset>
-            {
-                    new BarChartDataset
-                    {
-                        Label = "1'st dataset",
-                        BackgroundColor = ColorUtil.RandomColorString(),
-                        BorderColor = ColorUtil.RandomColorString(),
-                        Data = new List<dynamic> {rand.Next(30), rand.Next(30), rand.Next(30), rand.Next(30), rand.Next(30), rand.Next(30)}
-                    },
-                    new BarChartDataset
-                    {
-                        Label = "2'nd dataset",
-                        BackgroundColor = ColorUtil.RandomColorString(),
-                        BorderColor = ColorUtil.RandomColorString(),
-                        Data = new List<dynamic> {rand.Next(30), rand.Next(30), rand.Next(30), rand.Next(30), rand.Next(30), rand.Next(30)}
-                    },
-                    new BarChartDataset
-                    {
-                        Label = "3'rd dataset",
-                        BackgroundColor = ColorUtil.RandomColorString(),
-                        BorderColor = ColorUtil.RandomColorString(),
-                        Data = new List<dynamic> {rand.Next(30), rand.Next(30), rand.Next(30), rand.Next(30), rand.Next(30), rand.Next(30)}
-                    },
-                    new BarChartDataset
-                    {
-                        Label = "4'th dataset",
-                        BackgroundColor = ColorUtil.RandomColorString(),
-                        BorderColor = ColorUtil.RandomColorString(),
-                        Data = new List<dynamic> {rand.Next(30), rand.Next(30), rand.Next(30), rand.Next(30), rand.Next(30), rand.Next(30)}
-                    }
-                }
-            }
-        };
-    }
-
-    [JSInvokable]
-    public void LegendItemInstanceOnHoverHandler(object sender, object mousemove)
-    {
-        var argsJObj = JObject.FromObject(mousemove);
-
-        var clickedDatasetIndex = (int)argsJObj["datasetIndex"];
-        var hoveredItemDatasetName = barChartConfig.Data.Datasets[clickedDatasetIndex].Label;
-
-        Toaster.Info(
-            $"'{hoveredItemDatasetName}'",
-            "Mouse over item",
-            options =>
-            {
-                options.VisibleStateDuration = 700;
-                options.ShowTransitionDuration = 100;
-                options.HideTransitionDuration = 100;
-            });
-    }
-
-    [JSInvokable]
-    public void InstanceClickHandler(object sender, object args)
-    {
-        var argsJObj = JObject.FromObject(args);
-
-        var clickedDatasetIndex = (int)argsJObj["datasetIndex"];
-        var clickedDatasetName = barChartConfig.Data.Datasets[clickedDatasetIndex].Label;
-
-        Toaster.Info(
-            $"'{clickedDatasetName}'",
-            "Dataset clicked",
-            options =>
-            {
-                options.VisibleStateDuration = 700;
-                options.ShowTransitionDuration = 100;
-                options.HideTransitionDuration = 100;
-            });
-    }
-
-    private void UpdateChart()
-    {
-        //Update existing dataset
-        barChartConfig.Data.Labels.Add($"{DateTime.Now.Second}");
-        barChartConfig.Data.Datasets.ForEach(dataset => { dataset.Data.Add(DateTime.Now.Second); });
-    }
-
-}
+<DotNetInstanceHandlersComponent />
