Fixed broken .Net Instance method handlers

--- a/samples/ServerSide/ChartJs.Blazor.Sample.Serverside/Pages/Index.cshtml
+++ b/samples/ServerSide/ChartJs.Blazor.Sample.Serverside/Pages/Index.cshtml
@@ -27,5 +27,6 @@
     <script src="_framework/components.server.js"></script>
     <script src="~/dist/ChartJsInterop.js" type="text/javascript" language="javascript"></script>
     <script src="~/dist/SampleJsInterop.js" type="text/javascript" language="javascript"></script>
+    <link href="css/toastr.min.css" rel="stylesheet"/>
 </body>
 </html>
