Update to chartjs 2.8

--- a/samples/ServerSide/ChartJs.Blazor.Sample.Serverside/Pages/Index.cshtml
+++ b/samples/ServerSide/ChartJs.Blazor.Sample.Serverside/Pages/Index.cshtml
@@ -21,7 +21,7 @@
 <body>
     <app>@(await Html.RenderComponentAsync<App>())</app>
 
-    <script src="//cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0/dist/Chart.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/highlight.min.js"></script>
 
     <script src="_framework/components.server.js"></script>
