--- a/samples/ServerSide/ChartJs.Blazor.Sample.Serverside/Pages/Index.cshtml
+++ b/samples/ServerSide/ChartJs.Blazor.Sample.Serverside/Pages/Index.cshtml
@@ -14,7 +14,7 @@
               asp-fallback-href="css/bootstrap/bootstrap.min.css"
               asp-fallback-test-class="sr-only" asp-fallback-test-property="position" asp-fallback-test-value="absolute"
               crossorigin="anonymous"
-              integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"/>
+              integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" />
     </environment>
     <link href="css/site.css" rel="stylesheet" />
 </head>
@@ -25,8 +25,8 @@
     <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.12.0/highlight.min.js"></script>
 
     <script src="_framework/components.server.js"></script>
-    <script src="~/dist/ChartJsInterop.js" type="text/javascript" language="javascript"></script>
     <script src="~/dist/SampleJsInterop.js" type="text/javascript" language="javascript"></script>
-    <link href="css/toastr.min.css" rel="stylesheet"/>
+    <script src="~/ChartJs.Blazor/ChartJsInterop.js" type="text/javascript" language="javascript"></script>
+    <link href="css/toastr.min.css" rel="stylesheet" />
 </body>
 </html>
