1. The properties of ChartBase aren't publicly settable
2. Accepted ReSharper's suggestion for fixing namespaces (though it built just fine without it :D)

--- a/src/ChartJs.Blazor/Charts/ChartJsBubbleChart.cshtml
+++ b/src/ChartJs.Blazor/Charts/ChartJsBubbleChart.cshtml
@@ -1,5 +1,5 @@
 ﻿@using ChartJs.Blazor.ChartJS.BubbleChart
-@inherits ChartBase<BubbleChartConfig>
+@inherits ChartJs.Blazor.Charts.ChartBase<BubbleChartConfig>
 
 <div class="row">
     <div class="container">
