--- a/src/ChartJs.Blazor/Charts/ChartJsDoughnutChart.cshtml
+++ b/src/ChartJs.Blazor/Charts/ChartJsDoughnutChart.cshtml
@@ -1,5 +1,5 @@
 ﻿@using ChartJs.Blazor.ChartJS.DoughnutChart
-@inherits ChartBase<DoughnutChartConfig>
+@inherits ChartJs.Blazor.Charts.ChartBase<DoughnutChartConfig>
 
 <div class="row">
     <div class="container">
