--- a/src/ChartJs.Blazor/Charts/ChartJsMixedChart.cshtml
+++ b/src/ChartJs.Blazor/Charts/ChartJsMixedChart.cshtml
@@ -1,5 +1,5 @@
 ﻿@using ChartJs.Blazor.ChartJS.MixedChart
-@inherits ChartBase<MixedChartConfig>
+@inherits ChartJs.Blazor.Charts.ChartBase<MixedChartConfig>
 
 <div class="row">
     <div class="container">
