--- a/src/ChartJs.Blazor/Charts/ChartJsPolarAreaChart.cshtml
+++ b/src/ChartJs.Blazor/Charts/ChartJsPolarAreaChart.cshtml
@@ -1,5 +1,5 @@
 ﻿@using ChartJs.Blazor.ChartJS.PolarAreaChart
-@inherits ChartBase<PolarAreaChartConfig>
+@inherits ChartJs.Blazor.Charts.ChartBase<PolarAreaChartConfig>
 
 <div class="row">
     <div class="container">
