--- a/src/ChartJs.Blazor/Charts/ChartJsRadarChart.cshtml
+++ b/src/ChartJs.Blazor/Charts/ChartJsRadarChart.cshtml
@@ -1,5 +1,5 @@
 ﻿@using ChartJs.Blazor.ChartJS.RadarChart
-@inherits ChartBase<RadarChartConfig>
+@inherits ChartJs.Blazor.Charts.ChartBase<RadarChartConfig>
 
 <div class="row">
     <div class="container">
