--- a/src/ChartJs.Blazor/Charts/ChartJsScatterChart.cshtml
+++ b/src/ChartJs.Blazor/Charts/ChartJsScatterChart.cshtml
@@ -1,5 +1,5 @@
 ﻿@using ChartJs.Blazor.ChartJS.ScatterChart
-@inherits ChartBase<ScatterChartConfig>
+@inherits ChartJs.Blazor.Charts.ChartBase<ScatterChartConfig>
 
 <div class="row">
     <div class="container">
