--- a/src/ChartJs.Blazor/Charts/ChartJsBarChart.cshtml
+++ b/src/ChartJs.Blazor/Charts/ChartJsBarChart.cshtml
@@ -1,5 +1,5 @@
 ﻿@using ChartJs.Blazor.ChartJS.BarChart
-@inherits ChartBase<BarChartConfig>
+@inherits ChartJs.Blazor.Charts.ChartBase<BarChartConfig>
 
 <div class="row">
     <div class="container">
