--- a/src/ChartJs.Blazor/Charts/ChartJsLineChart.cshtml
+++ b/src/ChartJs.Blazor/Charts/ChartJsLineChart.cshtml
@@ -1,5 +1,5 @@
 ﻿@using ChartJs.Blazor.ChartJS.LineChart
-@inherits ChartBase<LineChartConfig>
+@inherits ChartJs.Blazor.Charts.ChartBase<LineChartConfig>
 
 <div class="row">
     <div class="container">
