--- a/src/ChartJs.Blazor/Charts/ChartJsPieChart.cshtml
+++ b/src/ChartJs.Blazor/Charts/ChartJsPieChart.cshtml
@@ -1,5 +1,5 @@
 ﻿@using ChartJs.Blazor.ChartJS.PieChart
-@inherits ChartBase<PieChartConfig>
+@inherits ChartJs.Blazor.Charts.ChartBase<PieChartConfig>
 
 <div class="row">
     <div class="container">
