Changed so that (Interaction)Mode is interpreted as a string instead of int32(Enum default).
To get tooltips on data points.

--- a/samples/Shared/ChartJs.Blazor.Sample.Shared/Components/BubbleChartComponent.cshtml
+++ b/samples/Shared/ChartJs.Blazor.Sample.Shared/Components/BubbleChartComponent.cshtml
@@ -42,7 +42,7 @@
                 Display = true,
                 Responsive = true,
                 Title = new OptionsTitle { Display = true, Text = "I R TITLE" },
-                Tooltips = new Tooltips { Mode = Mode.point },
+                Tooltips = new Tooltips { InteractionMode = InteractionMode.Point },
             },
             Data = new BubbleChartData
             {
