--- a/samples/Shared/ChartJs.Blazor.Sample.Shared/Components/LineChart/FillLineChartComponent.cshtml
+++ b/samples/Shared/ChartJs.Blazor.Sample.Shared/Components/LineChart/FillLineChartComponent.cshtml
@@ -44,7 +44,7 @@
                 Title = new OptionsTitle { Display = true, Text = "Fill Line Chart" },
                 Tooltips = new Tooltips
                 {
-                    Mode = Mode.nearest,
+                    InteractionMode = InteractionMode.Nearest,
                     Intersect = false
                 },
                 Scales = new Scales
@@ -73,7 +73,7 @@
                 Hover = new LineChartOptionsHover
                 {
                     Intersect = true,
-                    Mode = Mode.nearest
+                    InteractionMode = InteractionMode.Nearest
                 }
             },
             Data = new LineChartData
