--- a/samples/Shared/ChartJs.Blazor.Sample.Shared/Components/LineChart/LineChartComponent.cshtml
+++ b/samples/Shared/ChartJs.Blazor.Sample.Shared/Components/LineChart/LineChartComponent.cshtml
@@ -53,7 +53,7 @@
                 },
                 Tooltips = new Tooltips
                 {
-                    Mode = Mode.nearest,
+                    InteractionMode = InteractionMode.Nearest,
                     Intersect = false
                 },
                 Scales = new Scales
@@ -82,7 +82,7 @@
                 Hover = new LineChartOptionsHover
                 {
                     Intersect = true,
-                    Mode = Mode.nearest
+                    InteractionMode = InteractionMode.Nearest
                 }
             },
             Data = new LineChartData
