--- a/samples/ChartJs.Blazor.Sample/Pages/Legend/DotNet-Instance-Handlers.razor
+++ b/samples/ChartJs.Blazor.Sample/Pages/Legend/DotNet-Instance-Handlers.razor
@@ -1,3 +1,4 @@
 ﻿@page "/Legend/DotNetInstanceHandlers"
+@using ChartJs.Blazor.Sample.Shared.Components.Legend
 
 <DotNetInstanceHandlersComponent />
