--- a/samples/ServerSide/ChartJs.Blazor.Sample.Serverside/_Imports.razor
+++ b/samples/ServerSide/ChartJs.Blazor.Sample.Serverside/_Imports.razor
@@ -3,11 +3,9 @@
 @using Microsoft.AspNetCore.Components.Layouts
 @using Microsoft.AspNetCore.Components.Routing
 @using Microsoft.JSInterop
-@using ChartJs.Blazor.Sample.Serverside.Components.Shared
 @using ChartJs.Blazor.Charts
 @using ChartJs.Blazor.ChartJS.Common
 @using ChartJs.Blazor.ChartJS.Common.Legends
 @using ChartJs.Blazor.Util.Color
-@addTagHelper *,ChartJs.Blazor.Sample.Shared
-@addTagHelper *,ChartJs.Blazor
-@addTagHelper *, Sotsera.Blazor.Toaster
+@using ChartJs.Blazor.Sample.Serverside.Shared
+@using ChartJs.Blazor.Sample.Shared.Components
