Adopt changes proposed by pull requests: .razor instead of .cshtml, remove some js which led to false labels, use Interaction mode which is interpreted as string as opposed to an int if you used the enum

--- a/WebCore/Pages/FetchData.razor
+++ b/WebCore/Pages/FetchData.razor
@@ -49,7 +49,7 @@
                 },
                 Tooltips = new Tooltips
                 {
-                    Mode = Mode.nearest,
+                    InteractionMode = InteractionMode.Nearest,
                     Intersect = false
                 },
                 Scales = new Scales
@@ -78,7 +78,7 @@
                 Hover = new LineChartOptionsHover
                 {
                     Intersect = true,
-                    Mode = Mode.nearest
+                    InteractionMode = InteractionMode.Nearest
                 }
             },
             Data = new LineChartData
