Make typesafe version of bar and line char, update SteppedLine

--- a/ChartJs.Blazor/Charts/ChartJsBarChart.razor
+++ b/ChartJs.Blazor/Charts/ChartJsBarChart.razor
@@ -1,5 +1,6 @@
 ﻿@using ChartJs.Blazor.ChartJS.BarChart
-@inherits ChartJs.Blazor.Charts.ChartBase<BarChartConfig>
+@typeparam TData
+@inherits ChartJs.Blazor.Charts.ChartBase<BarChartConfig<TData>>
 
 <div class="row">
     <div class="container">
