--- a/ChartJs.Blazor/Charts/ChartJsBarChartMixed.razor
+++ b/ChartJs.Blazor/Charts/ChartJsBarChartMixed.razor
@@ -1,6 +1,5 @@
-﻿@using ChartJs.Blazor.ChartJS.MixedChart
-@typeparam TData
-@inherits ChartJs.Blazor.Charts.ChartBase<MixedChartConfig<TData>>
+﻿@using ChartJs.Blazor.ChartJS.BarChart
+@inherits ChartJs.Blazor.Charts.ChartBase<BarChartConfigMixed>
 
 <div class="row">
     <div class="container">
