--- a/ChartJs.Blazor/Charts/ChartJsLineChartMixed.razor
+++ b/ChartJs.Blazor/Charts/ChartJsLineChartMixed.razor
@@ -1,6 +1,5 @@
-﻿@using ChartJs.Blazor.ChartJS.MixedChart
-@typeparam TData
-@inherits ChartJs.Blazor.Charts.ChartBase<MixedChartConfig<TData>>
+﻿@using ChartJs.Blazor.ChartJS.LineChart
+@inherits ChartJs.Blazor.Charts.ChartBase<LineChartConfigMixed>
 
 <div class="row">
     <div class="container">
