--- a/WebCore/Pages/FetchDataMixed.razor
+++ b/WebCore/Pages/FetchDataMixed.razor
@@ -1,4 +1,4 @@
-@page "/fetchdata"
+@page "/fetchdataMixed"
 @using WebCore.Data
 @using ChartJs.Blazor.Charts
 @using ChartJs.Blazor.ChartJS.Common
@@ -8,7 +8,7 @@
 @inject WeatherForecastService ForecastService
 
 <h2>Line Chart</h2>
-<ChartJsLineChart TData="int" @ref="lineChartJs" Config="@lineChartConfig" Width="600" Height="300" />
+<ChartJsLineChartMixed @ref="lineChartJs" Config="@lineChartConfig" Width="600" Height="300" />
 
 @if (forecasts == null)
 {
@@ -17,14 +17,14 @@
 
 @functions
 {
-    LineChartConfig<int> lineChartConfig;
-    ChartJsLineChart<int> lineChartJs;
+        LineChartConfigMixed lineChartConfig;
+        ChartJsLineChartMixed lineChartJs;
 
-    WeatherForecast[] forecasts;
+        WeatherForecast[] forecasts;
 
     protected override async Task OnInitAsync()
     {
-        lineChartConfig = new LineChartConfig<int>
+        lineChartConfig = new LineChartConfigMixed
         {
             CanvasId = "myFirstLineChart",
             Options = new LineChartOptions
@@ -79,17 +79,17 @@
                     Mode = InteractionMode.Nearest
                 }
             },
-            Data = new LineChartData<int>
+            Data = new LineChartData<object>
             {
                 Labels = new List<string>(),
-                Datasets = new List<LineChartDataset<int>>
+                Datasets = new List<LineChartDataset<object>>
             {
-                    new LineChartDataset<int>
+                    new LineChartDataset<object>
                     {
                         BackgroundColor = "#ff6384",
                         BorderColor = "#ff6384",
                         Label = "Temperatur in C°",
-                        Data = new List<int>(),
+                        Data = new List<object>(),
                         Fill = false,
                         BorderWidth = 2,
                         PointRadius = 3,
@@ -102,7 +102,7 @@
 
         forecasts = await ForecastService.GetForecastAsync(DateTime.Now);
 
-        lineChartConfig.Data.Labels.AddRange(forecasts.Select(p => p.Date.ToShortDateString()));
-        lineChartConfig.Data.Datasets[0].Data.AddRange(forecasts.Select(p => p.TemperatureC));
+        lineChartConfig.Data.Labels.AddRange(forecasts.Select(p => p.Date.ToShortDateString()).Concat(new[] { "new1", "new2" }));
+        lineChartConfig.Data.Datasets[0].Data.AddRange(forecasts.Select(p => (object)p.TemperatureC).Concat(new object[] { "a", 'b' }));
     }
 }
