--- a/WebCore/Shared/NavMenu.razor
+++ b/WebCore/Shared/NavMenu.razor
@@ -18,6 +18,11 @@
             </NavLink>
         </li>
         <li class="nav-item px-3">
+            <NavLink class="nav-link" href="fetchdataMixed">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data Mixed
+            </NavLink>
+        </li>
+        <li class="nav-item px-3">
             <NavLink class="nav-link" href="fetchdata">
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
             </NavLink>
