Remove all mixed stuff

--- a/WebCore/Pages/FetchData.razor
+++ b/WebCore/Pages/FetchData.razor
@@ -47,7 +47,7 @@
                 },
                 Tooltips = new Tooltips
                 {
-                    Mode = InteractionMode.Dataset,
+                    Mode = InteractionMode.Nearest,
                     Intersect = false
                 },
                 Scales = new Scales
