Fix steppedLine messup -> implement objectEnum and use on SteppedLine

--- a/WebCore/Pages/FetchData.razor
+++ b/WebCore/Pages/FetchData.razor
@@ -94,7 +94,7 @@
                         BorderWidth = 2,
                         PointRadius = 3,
                         PointBorderWidth = 1,
-                        SteppedLine = SteppedLine.False
+                        SteppedLine = SteppedLine.TEST
                     }
                 }
             }
