--- a/ChartJs.Blazor/Charts/ChartJsLineChart.razor
+++ b/ChartJs.Blazor/Charts/ChartJsLineChart.razor
@@ -1,6 +1,5 @@
 ﻿@using ChartJs.Blazor.ChartJS.LineChart
-@typeparam TData
-@inherits ChartJs.Blazor.Charts.ChartBase<LineChartConfig<TData>>
+@inherits ChartJs.Blazor.Charts.ChartBase<LineChartConfig>
 
 <div class="row">
     <div class="container">
