--- a/WebCore/Pages/FetchDataTimeExample.razor
+++ b/WebCore/Pages/FetchDataTimeExample.razor
@@ -17,8 +17,8 @@
 
 @functions
 {
-    LineChartConfig<int> lineChartConfig;
-    ChartJsLineChart<int> lineChartJs;
+    LineChartConfig<TimeTupel<int>> lineChartConfig;
+    ChartJsLineChart<TimeTupel<int>> lineChartJs;
 
     WeatherForecast[] forecasts;
 
@@ -47,33 +47,33 @@
                 },
                 Tooltips = new Tooltips
                 {
-                    Mode = InteractionMode.Point,
+                    Mode = InteractionMode.Nearest,
                     Intersect = false
                 },
                 Scales = new Scales
                 {
-                    xAxes = new List<Axis>
-                {
+                    xAxes = new List<CartesianAxis>
+                    {
                         new TimeAxis
                         {
                             Distribution = TimeDistribution.Linear,
-                            Ticks = new Ticks
+                            Ticks = new TimeTicks
                             {
-                                
-                            }
+
+                            },
+                            Time = new TimeOptions
+                            {
+                                Unit = TimeMeasurement.Hour,
+                                Round = TimeMeasurement.Hour,
+                                TooltipFormat = "DD.MM.YYYY HH:mm",
+                                DisplayFormats = new Dictionary<TimeMeasurement, string>()
+                                {
+                                    { TimeMeasurement.Hour, "HH:00" }
+                                }
+                            },
                             ScaleLabel = new ScaleLabel
                             {
                                 LabelString = "Zeit"
-                            }
-                        }
-                    },
-                    yAxes = new List<Axis>
-                {
-                        new Axis
-                        {
-                            ScaleLabel = new ScaleLabel
-                            {
-                                LabelString = "Temperatur"
                             }
                         }
                     }
@@ -84,17 +84,17 @@
                     Mode = InteractionMode.Y
                 }
             },
-            Data = new LineChartData<int>
+            Data = new LineChartData<TimeTupel<int>>
             {
-                Labels = new List<string>(),
-                Datasets = new List<LineChartDataset<int>>
-            {
-                    new LineChartDataset<int>
+                //Labels = new List<string>(),
+                Datasets = new List<LineChartDataset<TimeTupel<int>>>
+                {
+                    new LineChartDataset<TimeTupel<int>>
                     {
                         BackgroundColor = "#ff6384",
                         BorderColor = "#ff6384",
                         Label = "Temperatur in C°",
-                        Data = new List<int>(),
+                        Data = new List<TimeTupel<int>>(),
                         Fill = false,
                         BorderWidth = 2,
                         PointRadius = 3,
@@ -105,9 +105,9 @@
             }
         };
 
-        forecasts = await ForecastService.GetForecastAsync(DateTime.Now);
+        forecasts = await ForecastService.GetForecastAsync(DateTime.Now, 2);
 
-        lineChartConfig.Data.Labels.AddRange(forecasts.Select(p => p.Date.ToShortDateString()));
-        lineChartConfig.Data.Datasets[0].Data.AddRange(forecasts.Select(p => p.TemperatureC));
+        //lineChartConfig.Data.Labels.AddRange(forecasts.Select(p => p.Date.ToShortDateString()));
+        lineChartConfig.Data.Datasets[0].Data.AddRange(forecasts.Select(p => new TimeTupel<int>(p.Date, p.TemperatureC)));
     }
 }
